--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TrelloReader",
+  "name": "trello-json-reader.js",
   "version": "0.0.1",
   "author": "Yasuki Ikeuchi <ikeyasu@gmail.com>",
   "private": true,
